bad/mul_invalid_types_string_bool.example_compiler_output
ERROR
[1mbad/mul_invalid_types_string_bool.lat:3:5: [1;31merror: [0;1mmultiplication is defined only for int values, not `string` and `boolean`[m
	"" * false;
	   [1;32m^[m
